# DOODLE_MAKER

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_STATUS.md  README.md  Systems_Analysis.md  WARP_v1.0.0.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: water_conservation.json
src/: main.py
src/core/: doodle_generator.py  script_parser.py  tts_engine.py
