[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doodleedumaker"
version = "0.1.0"
description = "AI-Powered Educational Doodle Video Creator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "DoodleEduMaker Contributors", email = "hello@doodleedumaker.org"}
]
keywords = ["education", "video", "ai", "doodle", "tts", "stable-diffusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Education",
]

dependencies = [
    # GUI Framework
    "PySide6>=6.6.0",
    
    # AI/ML Core
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "diffusers>=0.25.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    
    # Image Processing
    "Pillow>=10.1.0",
    "opencv-python>=4.8.0",
    "controlnet-aux>=0.0.7",
    
    # Text-to-Speech
    "TTS>=0.22.0",  # Coqui TTS (includes XTTS-v2)
    "piper-tts>=1.2.0",
    
    # Video Processing
    "moviepy>=1.0.3",
    "ffmpeg-python>=0.2.0",
    
    # Utilities
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0.1",
    "markdown>=3.5.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    
    # Performance Optimization
    "bitsandbytes>=0.41.0",  # INT8 quantization
    "safetensors>=0.4.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/urmt/DOODLE_MAKER"
Documentation = "https://github.com/urmt/DOODLE_MAKER/tree/main/docs"
Repository = "https://github.com/urmt/DOODLE_MAKER"
Issues = "https://github.com/urmt/DOODLE_MAKER/issues"

[project.scripts]
doodleedumaker = "doodleedumaker.main:main"
doodle-setup = "doodleedumaker.setup_models:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["doodleedumaker*"]

[tool.setuptools.package-data]
doodleedumaker = [
    "ui/resources/*.ui",
    "ui/resources/*.qrc",
    "ui/resources/icons/*.png",
    "config/*.yaml",
    "config/*.json",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["B011"]  # assert False

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | models
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "diffusers.*",
    "transformers.*",
    "TTS.*",
    "moviepy.*",
    "controlnet_aux.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/doodleedumaker",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]
